--- a/src/app/pages/offrestage/offrestage.component.html
+++ b/src/app/pages/offrestage/offrestage.component.html
@@ -28,7 +28,14 @@
             <div class="form-group">
                 <label for="email">Email</label>
                 <input type="email" [(ngModel)]="nouvelleOffre.email" class="form-control" id="email" name="email" required>
+            
+            
             </div>
+            <label for="type">Type de stage</label>
+            <select class="form-control" id="type" [(ngModel)]="nouvelleOffre.type" name="type">
+            <option *ngFor="let type of types | keyvalue" [value]="type.key">{{ type.value }}</option>
+              </select>
+              
       
             <div class="form-group">
                 <label for="description">Description</label>
@@ -44,12 +51,16 @@
                 <label for="datefin_stage">Date fin stage</label>
                 <input type="date" [ngModel]="nouvelleOffre.datefin_stage | date: 'yyyy-MM-dd'" (ngModelChange)="nouvelleOffre.datefin_stage = $event" class="form-control" id="datefin_stage" name="datefin_stage" required>
             </div>
+            <div class="form-group">
+                <label for="duree">Durée du stage (jours)</label>
+                <input type="text" class="form-control" id="duree" name="duree" [(ngModel)]="nouvelleOffre.duree" readonly>
+              </div>
+              
             
             <button type="submit" class="btn btn-primary mt-4">Ajouter</button>
         </form>
     </div>
 </div>
-
 <div class="container mt-4">
     <h1>Offres Table</h1>
     <table class="table">
@@ -62,6 +73,8 @@
                 <th scope="col">Description</th>
                 <th scope="col">Date Début Stage</th>
                 <th scope="col">Date Fin Stage</th>
+                <th scope="col">Durée (jours)</th>
+                <th scope="col">Type</th>
                 <th scope="col">Option</th>
             </tr>
         </thead>
@@ -74,6 +87,8 @@
                 <td>{{ offre.description }}</td>
                 <td>{{ offre.datedebut_stage | date: 'shortDate' }}</td>
                 <td>{{ offre.datefin_stage | date: 'shortDate' }}</td>
+                <td>{{ offre.duree }}</td>
+                <td>{{ types[offre.type] }}</td>
                 <td>
                     <button type="button" class="btn btn-success" (click)="setUpdate(offre)">Edit</button>
                     <button type="button" class="btn btn-danger" (click)="deleteOffre(offre)">Delete</button>
