--- a/src/app/pages/offrestage/offrestage.component.scss
+++ b/src/app/pages/offrestage/offrestage.component.scss
@@ -22,3 +22,10 @@
 .text-white {
     color: #FFFFFF;
 }
+
+
+.logo-image {
+    max-width: 150px; /* Réglez cette valeur selon vos besoins */
+    height: auto;
+  }
+  
