--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -44,7 +44,7 @@
     min-height: 150px !important;
     border: none !important;
     background: #fff !important;
-    color: #495057 !important;
+    color: #dc5353 !important;
 }
 
 // ----- Advance Ui --------//
@@ -75,7 +75,7 @@
 }
 
 .filled {
-    color: #1e90ff;
+    color: #da3a44;
 }
 
 .bad {
@@ -201,12 +201,12 @@ a.ck.ck-button.ck-on {
     }
 
     .bs-datepicker-container {
-        background-color: #2a3042 !important;
+        background-color: #ef2d50 !important;
 
     }
 
     .bs-datepicker-head button {
-        color: #c3cbe4 !important;
+        color: #f05b68 !important;
     }
 
     .bs-datepicker-body {
@@ -350,8 +350,8 @@ a.ck.ck-button.ck-on {
     line-height: 28px !important;
     font-size: 20px !important;
     border-radius: 50% !important;
-    background-color: rgba(85, 110, 230, .25) !important;
-    color: #556ee6 !important;
+    background-color: rgba(230, 19, 47, 0.838) !important;
+    color: #e73636 !important;
     justify-content: center !important;
     margin: 4px 8px !important;
     display: inline-flex !important;
